applications/namespaces/default/netpols/ingress-nginx-external.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-external
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx-external
  ingress:
    - fromEntities:
        - all
  egress:
    - toCIDR:
        - "192.168.5.252/32"
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
    - toEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/name
              operator: In
              values:
                - "overseerr"
                - "home-assistant"
        - matchExpressions:
            - key: app
              operator: In
              values:
                - "whoami"
    - toServices:
        - k8sService:
            namespace: default
            serviceName: jellyseerr
        - k8sService:
            namespace: default
            serviceName: "home-assistant"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
