applications/namespaces/default/netpols/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 443
        - port: 80
