applications/namespaces/default/netpols/no-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: block-egress
    namespace: default
spec:
    policyTypes:
      - "Egress"
    podSelector:
        matchExpressions:
          - key:  app.kubernetes.io/name
            operator: In
            values:
              - "vaultwarden"
              - "paperless"
    egress:
        - to:
              - namespaceSelector: {}
