applications/namespaces/default/netpols/qbit.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbit
  namespace: default
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - qbittorrent
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/instance
              operator: In
              values:
                - radarr
                - sonarr
                - ingress-nginx
                - readarr
                - prowlarr
  egress:
    - toEntities:
       - cluster
    - toCIDRSet:
        - cidr: 149.102.254.78/32
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
