applications/namespaces/default/netpols/radarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  egressDeny:
    - toCIDR:
        - "192.168.0.0/16"
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
      toPorts:
        -
          ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        -
          ports:
            - port: "9696"
              protocol: TCP
    - toEntities:
        - cluster
    - toFQDNs:
        - matchPattern: "*.radarr.video"
        - matchPattern: "*.tmdb.org"
        - matchName: "radarr.servarr.com"
        - matchName: "api.trakt.tv"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
  ingress:
    - fromEntities:
       - cluster
      toPorts:
        - ports:
           - port: "7878"
             protocol: TCP
