applications/namespaces/default/netpols/sonarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/instance
              operator: In
              values:
                - ingress-nginx
                - jellyseerr
                - prowlarr
      toPorts:
        - ports:
            - port: "8989"
  egress:
    - toEndpoints:
        - matchLabels:
            app: "jelly"
    - toEndpoints:
        - matchExpressions:
            - key: app.kubernetes.io/name
              operator: In
              values:
               - qbittorrent
               - prowlarr
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "*.sonarr.tv"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.thetvdb.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: thexem.info
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
